--- a/healthy_parent/healthy_web/src/main/webapp/pages/all-item-list.html
+++ b/healthy_parent/healthy_web/src/main/webapp/pages/all-item-list.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../plugins/elementui/index.css">
     <link rel="stylesheet" href="../plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body class="hold-transition">
 <div id="app">
@@ -39,11 +40,10 @@
                     </template>
                 </el-table-column>
                 <el-table-column prop="phoneNumber" label="电话" align="center"></el-table-column>
-                <el-table-column prop="regTime" label="注册时间" align="center"></el-table-column>
                 </el-table-column>
                 <el-table-column prop="password" label="密码" align="center"></el-table-column>
                 <el-table-column prop="email" label="邮箱" align="center"></el-table-column>
-                <el-table-column prop="birthday" label="生日" align="center"></el-table-column>
+                <el-table-column prop="birthday" label="生日" align="center"  :formatter="dateFormat"  ></el-table-column>
                 </el-table-column>
                 <el-table-column label="操作" align="center">
                     <template slot-scope="scope">
@@ -218,6 +218,7 @@
 <script src="../plugins/elementui/index.js"></script>
 <script type="text/javascript" src="../js/jquery.min.js"></script>
 <script src="../js/axios-0.18.0.js"></script>
+<script src="../js/moment.min.js"></script>
 <script>
     var vue = new Vue({
         el: '#app',
@@ -242,6 +243,14 @@
             this.findPage()
         },
         methods: {
+            //时间格式化
+            dateFormat:function(row, column) {
+                var date = row[column.property];
+                if (date == undefined) {
+                    return "";
+                }
+                return moment(date).format("YYYY-MM-DD");
+            },
 
             //编辑
             handleEdit() {
