--- a/healthy_parent/healthy_web/src/main/webapp/pages/report_member.html
+++ b/healthy_parent/healthy_web/src/main/webapp/pages/report_member.html
@@ -1,67 +1,118 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- 页面meta -->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>传智健康</title>
-        <meta name="description" content="传智健康">
-        <meta name="keywords" content="传智健康">
-        <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
-        <!-- 引入样式 -->
-        <link rel="stylesheet" href="../css/style.css">
-        <script src="../plugins/echarts/echarts.js"></script>
-    </head>
-    <body class="hold-transition">
-        <div id="app">
-            <div class="content-header">
-                <h1>统计分析<small>会员数量</small></h1>
-                <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
-                    <el-breadcrumb-item :to="{ path: '/' }">首页</el-breadcrumb-item>
-                    <el-breadcrumb-item>统计分析</el-breadcrumb-item>
-                    <el-breadcrumb-item>会员数量</el-breadcrumb-item>
-                </el-breadcrumb>
+<head>
+    <!-- 页面meta -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>传智健康</title>
+    <meta name="description" content="传智健康">
+    <meta name="keywords" content="传智健康">
+    <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
+    <!-- 引入样式 -->
+    <link rel="stylesheet" href="../plugins/elementui/index.css">
+    <link rel="stylesheet" href="../plugins/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../plugins/echarts/echarts.js"></script>
+    <style>
+        .newSearch{margin-left: 250px;display: inline-block;}
+    </style>
+</head>
+<body class="hold-transition">
+<div id="app">
+    <div class="content-header">
+        <h1>统计分析<small>会员数量</small></h1>
+        <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
+            <el-breadcrumb-item :to="{ path: '/' }">首页</el-breadcrumb-item>
+            <el-breadcrumb-item>统计分析</el-breadcrumb-item>
+            <el-breadcrumb-item>会员数量</el-breadcrumb-item>
+        </el-breadcrumb>
+    </div>
+    <div class="app-container">
+        <div class="box">
+            <!--按指定时间段展示-->
+            <div class="newSearch">
+                <template class="el-container">
+
+                    <el-date-picker
+                            v-model="startMonth"
+                            type="month"
+                            value-format=" yyyy-MM" format="yyyy-MM"
+                            :picker-options="pickerBeginDateBefore"
+                            placeholder="选择日期">
+                        {{startMonth}}
+                    </el-date-picker>
+
+                    <el-date-picker
+                            v-model="endMonth"
+                            type="month"
+                            value-format="yyyy-MM" format="yyyy-MM"
+                            :picker-options="pickerBeginDateBefore"
+                            placeholder="选择日期">
+                        {{endMonth}}
+                    </el-date-picker>
+
+                    <el-button type="primary"  @click="getMemberReport()">搜索</el-button>
+                </template>
             </div>
-            <div class="app-container">
-                <div class="box">
-                    <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
-                    <div id="chart1" style="height:600px;"></div>
-                </div>
-            </div>
+            <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
+            <div id="chart1" style="height:600px;"></div>
         </div>
-    </body>
-    <!-- 引入组件库 -->
-    <script src="../js/vue.js"></script>
-    <script src="../js/axios-0.18.0.js"></script>
-    <script type="text/javascript">
-        // 基于准备好的dom，初始化echarts实例
-        var myChart1 = echarts.init(document.getElementById('chart1'));
-
-        // 使用刚指定的配置项和数据显示图表。
-        //myChart.setOption(option);
-
-        axios.get("/report/getMemberReport.do").then((res)=>{
-            myChart1.setOption(
-                                {
-                                    title: {
-                                        text: '会员数量'
-                                    },
-                                    tooltip: {},
-                                    legend: {
-                                        data:['会员数量']
-                                    },
-                                    xAxis: {
-                                        data: res.data.data.months
-                                    },
-                                    yAxis: {
-                                        type:'value'
-                                    },
-                                    series: [{
-                                        name: '会员数量',
-                                        type: 'line',
-                                        data: res.data.data.memberCount
-                                    }]
-                                });
-        });
-    </script>
+    </div>
+</div>
+</body>
+<!-- 引入组件库 -->
+<script src="../js/vue.js"></script>
+<script src="../plugins/elementui/index.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script src="../js/axios-0.18.0.js"></script>
+<script type="text/javascript">
+    var vue = new Vue({
+        el:'#app',
+        data:{
+            startMonth: null,
+            endMonth: null,
+            months: [],
+            memberCount: [],
+            pickerBeginDateBefore: {//只能选今天以前的日期
+                disabledDate: time => {
+                    let _now = Date.now();
+                    return time.getTime() > _now;
+                }
+            }
+        },
+        created: function () {//在vue初始化时调用
+            this.getMemberReport();
+        },
+        methods:{
+            getMemberReport(){
+                // 使用刚指定的配置项和数据显示图表。
+                //myChart.setOption(option);
+                axios.post("/report/getMemberReport.do",{startMonth:this.startMonth,endMonth:this.endMonth}).then((res)=>{
+                    // 基于准备好的dom，初始化echarts实例
+                    myChart1 = echarts.init(document.getElementById('chart1'));
+                    myChart1.setOption({
+                        title: {
+                            text: '会员数量'
+                        },
+                        tooltip: {},
+                        legend: {
+                            data:['会员数量']
+                        },
+                        xAxis: {
+                            data: res.data.data.months
+                        },
+                        yAxis: {
+                            type:'value'
+                        },
+                        series: [{
+                            name: '会员数量',
+                            type: 'line',
+                            data: res.data.data.memberCount
+                        }]
+                    });
+                });
+            }
+        }
+    });
+</script>
 </html>
